Fixed news ticker control spacing.

--- a/assets/css/elements-css/news-ticker.css
+++ b/assets/css/elements-css/news-ticker.css
@@ -2,7 +2,7 @@
 .exad-news-ticker{
   display: block;
   width: 100%;
-  background: #FFF;
+  /* background: #FFF; */
   box-sizing: border-box;
   position: relative;
   overflow: hidden;
@@ -44,7 +44,7 @@
 }
 .exad-news-ticker .exad-bn-label,
 .exad-news-ticker .exad-bn-label.yes-small:after {
-  background-color: #7a56ff;  
+  /* background-color: #7a56ff;   */
 }
 .exad-news-ticker .exad-bn-label.yes-small:after {
   position: absolute;
@@ -166,7 +166,6 @@
 }
 .exad-news-ticker.bn-direction-rtl .exad-nt-controls{
   flex-direction: row-reverse;
-  padding: 0 20px 0 0;
 }
 .exad-news-ticker.bn-direction-rtl .exad-bn-label.yes-small:after{
   right: calc( 100% - 5px );
@@ -174,7 +173,6 @@
 .exad-news-ticker .exad-nt-controls button{
   width: 30px;
   padding: 0;
-  margin-right: 5px;
   border: inherit;
   height: 30px;
   cursor: pointer;
